<resources>

    <string name="app_name">SR Base</string>

    <string name="SRhint">SR Number</string>

    <string name="customer_name">Customer Name</string>

    <string name="model_number">Model Number</string>

    <string name="serial_number">Serial Number</string>

    <string name="description">Description</string>

    <string name="date">Date: </string>

    <string name="start_time">Start Time: </string>

    <string name="end_time">End Time: </string>

    <string name="travel_time">Travel Time</string>

    <string name="comment">Comment</string>

    <string name="part_number">Part Number</string>

    <string name="quantity">Quantity</string>

    <string name="source">Source</string>

    <string name="used">Used</string>

    <string name="add_daily">Add Daily</string>

    <string name="add_part">Add Part</string>

    <string name="confirm">Confirm</string>

    <string name="action_new_sr">New SR</string>

    <string name="start_date">Start Date</string>

    <string name="end_date">End Date</string>

    <string name="total_work_time">Total Work Time: </string>

    <string name="total_travel_time">Total Travel Time: </string>

    <string name="sr_number_header">"Sr Number: "</string>

    <string name="description_header">Description:</string>
    
    <string name="parts">Parts</string>
    
    <string name="model_number_header">"Model Number: "</string>
    
    <string name="serial_number_header">"Serial Number: "</string>

    <string name="customer_header">"Customer: "</string>
    
    <string name="edit_sr">Edit SR</string>
    
    <string name="forward_slash">/</string>
    
    <string name="month">Month</string>
    
    <string name="day">Day</string>
    
    <string name="Year">year</string>
    
    <string name="unused">Unused</string>
    
    <string name="no_description">No Description</string>

    <string name="unknown">Unknown</string>

    <string name="daily_logs">Daily Logs</string>

    <string name="today">Today</string>

    <string name="zero_hours">0.0 hours</string>

    <string name="dete_entry">Delete This Entry</string>
    <string name="part_number_missing">Part Number missing</string>
    <string name="business_name">Business Name</string>
    <string name="business_name_header">Business Name:</string>
    <string name="no_dates_found">No Dates Logged</string>

</resources>
