<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_row">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" xmlns:tools="http://schemas.android.com/tools">

            <EditText
                android:id="@+id/SRNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/SRhint"
                android:maxLines="1"
                android:singleLine="true"
                android:nextFocusDown="@+id/customerName"
                android:imeOptions="actionNext"
                tools:ignore="TextFields" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/customerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/customer_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:nextFocusDown="@+id/modelNumber"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/businessName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/business_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:nextFocusDown="@+id/modelNumber"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/modelNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/model_number"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/serialNumber"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/serialNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/serial_number"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/description"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="textMultiLine" />

        </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/button_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/sr_base_orange"
            android:layout_alignParentBottom="true"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/add_daily"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/add_daily" />

            <Button
                android:id="@+id/add_part"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/add_part"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/confirm"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

</RelativeLayout>
