<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_row">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:calendarViewShown="false"
                android:spinnersShown="true"
                android:startYear="2013" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/sr_base_orange"
                style="?android:attr/buttonBarStyle">

                <Button
                    android:id="@+id/start_time_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="showStartTimePickerDialog"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/start_time" />

                <Button
                    android:id="@+id/end_time_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="showEndTimePickerDialog"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/end_time" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/display_start_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="start"
                    android:text="@string/start_time"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/display_end_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="end"
                    android:text="@string/end_time"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>

            <EditText
                android:id="@+id/travel_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/travel_time"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/comment"
                android:inputType="textMultiLine" >
            </EditText>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/button_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/sr_base_orange"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/add_part_from_daily"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/add_part" />

        <Button
            android:id="@+id/daily_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/confirm" />

    </LinearLayout>

</RelativeLayout>